feat: add script fission workflow (#7)
